fix: prevent pytest from collecting standalone test scripts
- Configure pytest to only collect tests from tests/ directory
- Update test_cryoet_connection.py to exit gracefully when dependencies missing
- Prevents SystemExit(1) from crashing pytest during benchmark runs
- Fixes CI benchmark test failures caused by s3fs import error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,13 @@ Issues = "https://github.com/HEFTIEProject/zarr-benchmarks/issues"
 [tool.pytest.ini_options]
 addopts = "--strict-markers"
 markers = ["tensorstore", "zarr_python"]
+# Exclude CryoET connection tests from pytest collection (they have sys.exit() calls)
+norecursedirs = [".git", ".tox", "venv", "venv_*"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+# Explicitly exclude these standalone test scripts
+testpaths = ["tests"]
 
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "I"]
