fix: enable Zarr v3 experimental API in CryoET benchmarks CI
- Add ZARR_V3_EXPERIMENTAL_API=1 environment variable to synthetic tests
- Allows v3 tests to run successfully instead of being skipped
- All 16 tests should now pass (previously 15/16 with v3 skipped)

--- a/.github/workflows/cryoet-benchmarks.yml
+++ b/.github/workflows/cryoet-benchmarks.yml
@@ -42,6 +42,7 @@ jobs:
           python test_benchmarks_synthetic.py
         env:
           PYTHONUNBUFFERED: 1
+          ZARR_V3_EXPERIMENTAL_API: 1
 
       - name: Upload synthetic test results
         uses: actions/upload-artifact@v4
